--- a/settings/settings.html
+++ b/settings/settings.html
@@ -1,53 +1,56 @@
 <div class="form-group">
-    <label class="col-sm-2 control-label" for="video_id">{{'video_id' | translate}}</label>
+    <label class="col-sm-2 control-label" for="video_id">{{__('video_id')}}</label>
 
     <div class="col-sm-10">
         <input id="video_id" class="form-control"
                ng-model="settings.video_id"
-               placeholder="{{'video_id' | translate}}">
-        <span class="help-block m-b-none">{{'video_id_info' | translate}}</span>
+               placeholder="{{__('video_id')}}">
+        <span class="help-block m-b-none">{{__('video_id_info')}}</span>
     </div>
 </div>
 
 <div class="form-group">
-    <label class="col-sm-2 control-label">{{'video_size' | translate}}</label>
+    <label class="col-sm-2 control-label">{{__('video_size')}}</label>
 
     <div class="col-sm-5">
-        <input class="form-control"
+        <input type="number"
+               class="form-control"
                ng-model="settings.width"
-               placeholder="{{'width' | translate}}">
+               placeholder="{{__('width')}}">
     </div>
+
     <div class="col-sm-5">
-        <input class="form-control"
+        <input type="number"
+               class="form-control"
                ng-model="settings.height"
-               placeholder="{{'height' | translate}}">
+               placeholder="{{__('height')}}">
     </div>
 </div>
 
 <div class="checkbox">
     <label class="i-checks">
-        <input type="checkbox" ng-model="settings.suggested_video">
-        {{'suggested_video' | translate}}
+        <input type="checkbox" ng-model="settings.suggested_video"><i></i>
+        {{__('suggested_video')}}
     </label>
 </div>
 
 <div class="checkbox">
     <label class="i-checks">
-        <input type="checkbox" ng-model="settings.player_controls">
-        {{'player_controls' | translate}}
+        <input type="checkbox" ng-model="settings.player_controls"><i></i>
+        {{__('player_controls')}}
     </label>
 </div>
 
 <div class="checkbox">
     <label class="i-checks">
-        <input type="checkbox" ng-model="settings.video_title_player_actions">
-        {{'video_title_player_actions' | translate}}
+        <input type="checkbox" ng-model="settings.video_title_player_actions"><i></i>
+        {{__('video_title_player_actions')}}
     </label>
 </div>
 
 <div class="checkbox">
     <label class="i-checks">
-        <input type="checkbox" ng-model="settings.privacy_enhanced">
-        {{'privacy_enhanced' | translate}}
+        <input type="checkbox" ng-model="settings.privacy_enhanced"><i></i>
+        {{__('privacy_enhanced')}}
     </label>
 </div>
