fix minor issues

--- a/content/content.html
+++ b/content/content.html
@@ -1,6 +1,8 @@
 <iframe width="{{settings.width}}"
         height="{{settings.height}}"
-        src="{{youtube_url}}"
+        ng-src="{{youtube_url}}"
         frameborder="0"
         allowfullscreen>
 </iframe>
+
+{{youtube_url}}
