--- a/settings/settings.html
+++ b/settings/settings.html
@@ -5,7 +5,7 @@
         <input id="video_id" class="form-control"
                ng-model="settings.video_id"
                placeholder="{{__('video_id')}}">
-        <span class="help-block m-b-none" ng-bind-html="{{__('video_id_info')}}"></span>
+        <span class="help-block m-b-none" ng-bind-html="__('video_id_info')"></span>
     </div>
 </div>
 
