fix settings and styling

--- a/content/content.html
+++ b/content/content.html
@@ -2,7 +2,6 @@
         height="{{settings.height}}"
         ng-src="{{youtube_url | trustedSource}}"
         frameborder="0"
+        style="margin: 0 auto; display: block;" 
         allowfullscreen>
 </iframe>
-
-{{youtube_url}}
